--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>jar</packaging>
     <name>pepXML Java core API</name>
     <version>1.0-SNAPSHOT</version>
+    <url>https://github.com/sangzhe/jpepxml</url>
 
     <developers>
         <developer>
